# games-bevy

./: README.md
adventure/: AGENTS.md  CLAUDE.md  Cargo.toml
adventure/src/: components.rs  enemies.rs  main.rs  player.rs  rooms.rs  setup.rs  ui.rs  world.rs
arkanoid/: AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md
arkanoid/assets/audio/sfx/: sfx_sources.json
arkanoid/assets/levels/: round-01.ron  round-02.ron
arkanoid/src/: assets.rs  audio.rs  ball.rs  bricks.rs  collision.rs  components.rs  constants.rs  debug.rs  enemy.rs  flow.rs  input.rs  levels.rs  main.rs  player.rs  powerups.rs  resources.rs  schedule.rs  states.rs  ui.rs  vfx.rs
arkanoid/tools/: generate_assets.py
asteroids/: AGENTS.md  CLAUDE.md  Cargo.toml
asteroids/src/: asteroids.rs  collision.rs  main.rs  (+6 more)
bevy-template/: Cargo.toml
bevy_template/: AGENTS.md  CLAUDE.md  Cargo.toml
centipede/: AGENTS.md  CLAUDE.md  Cargo.toml
defender/: AGENTS.md  CLAUDE.md  Cargo.toml
donkey_kong/: AGENTS.md  CLAUDE.md  SPEC.md
frogger/: AGENTS.md  CLAUDE.md  Cargo.toml  SPEC.md
galaga/: AGENTS.md  CLAUDE.md  Cargo.toml  SPEC.md
joust/: AGENTS.md  CLAUDE.md  Cargo.toml  SPEC.md
lode_runner/: AGENTS.md  CLAUDE.md  Cargo.toml  SPEC.md
pac_man/: AGENTS.md  CLAUDE.md  Cargo.toml
pong/: AGENTS.md  CLAUDE.md
robotron_2084/: AGENTS.md  CLAUDE.md  Cargo.toml  SPEC.md
space_invaders/: AGENTS.md  CLAUDE.md  Cargo.toml
super_mario/: AGENTS.md  CLAUDE.md  Cargo.toml  SPEC.md  TASKS.md
super_mario/assets/levels/: 1-1.level.ron  1-2.level.ron  test.level.ron
super_mario/src/: assets.rs  block.rs  blocks.rs  camera.rs  collision.rs  components.rs  constants.rs  death.rs  decoration.rs  enemies.rs  enemy.rs  events.rs  input.rs  level.rs  level_complete.rs  main.rs  messages.rs  player.rs  powerup.rs  resources.rs  states.rs  ui.rs  warp.rs
super_mario/src/enemy/: goomba.rs  koopa.rs  mod.rs
tetris/: AGENTS.md  CLAUDE.md  Cargo.toml  SPEC.md
tetris/src/: board.rs  constants.rs  effects.rs  gameplay.rs  hud.rs  input.rs  main.rs  resources.rs  sidebar.rs  states.rs  tetromino.rs
zelda/: AGENTS.md  CLAUDE.md  Cargo.toml  SPEC.md
zelda/assets/data/: drops.ron  items.ron  rooms.ron
zelda/src/: audio.rs  camera.rs  collision.rs  combat.rs  components.rs  constants.rs  game_state.rs  input.rs  items.rs  main.rs  player.rs  rendering.rs  resources.rs  room.rs  states.rs  ui.rs
(+137 files in other folders)
