[package]
name = "arkanoid"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
# Hand-authored level layouts in assets/levels/*.ron (versions match Bevy's own to reuse builds).
ron = "0.12"
serde = { version = "1", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
