[package]
name = "super_mario"
version = "0.1.0"
edition = "2024"

[dependencies]
#bevy = { version = "0.18.1", features = ["dynamic_linking"] }
bevy = { version = "0.18.1", default-features = false, features = ["2d"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
