[package]
name = "bevy_template"
version = "0.1.0"
edition = "2024"

[dependencies]
ron = "0.9"
serde = { version = "1", features = ["derive"] }

[dependencies.bevy]
version = "0.18.1"
features = [
    "dynamic_linking",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
